# ExitTicket-8-01-Vehicle

./: CMakeLists.txt  main.cpp
include/: Boat.h  Car.h  Position.h  Vehicle.h
src/: Boat.cpp  Car.cpp  Position.cpp  Vehicle.cpp
